	PR middle-end/37414 	* predict.c (optimize_function_for_size_p): Don't segfault if 	FUN is NULL. 	* fold-const.c (LOGICAL_OP_NON_SHORT_CIRCUIT, fold_truthop, 	tree_swap_operands_p): Don't test cfun != NULL before calling 	optimize_function_for_s*_p.

* g++.dg/opt/init2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140122 138bc75d-0d04-0410-961f-82ee72b054a4